--- a/main-flask-core/templates/base.html
+++ b/main-flask-core/templates/base.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html>
 	<head>
-		{% block head %}
-		<link rel="stylesheet" href="/main-flask-core/static/style.css">
+		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 		<title>vkIO</title>
-		{% endblock %}
 	</head>
 	<body>
-		<div id="content">{% block content %} {% end block %}</div>
-		<div id="footer">&copy; Copyright 2022 by me</div>
+		<div class='metanaw'>
+			{% if not session.logged_in %}
+			<a href="{{url_for('login')}}">Войти</a>
+			{% else %}
+			<a href="{{url_for('logout')}}"></a>
+			{% endif %}
+		</div>
+
+		{% for message in get_flash_message %}
+		<div class=" flash">{{message}}</div>
+		{% endfor %}
+		{% block body %}{% endblock %}
+
+		<div class="footer" >&copy Все права защищены</div>
 	</body>
 </html>
