--- a/mainFlaskCore/templates/base.html
+++ b/mainFlaskCore/templates/base.html
@@ -13,11 +13,11 @@
 			{% endif %}
 		</div>
 
-		{% for message in get_flash_message %}
+		{% for message in get_flashed_messages() %}
 		<div class=" flash">{{message}}</div>
 		{% endfor %}
 		{% block body %}{% endblock %}
-
-		<div class="footer" >&copy Все права защищены</div>
+		<footer><div class="footer" >&copy Все права защищены</div></footer>
+		
 	</body>
 </html>
