--- a/mainFlaskCore/templates/show_entries.html
+++ b/mainFlaskCore/templates/show_entries.html
@@ -7,7 +7,7 @@
         <dt>Название</dt>
         <dd><input type="text" size="30" name="title" ></dd>
         <dd><textarea name="text"  cols="40" rows="5"></textarea></dd>
-        <dd><input type="submit" value="Поделиться"  ></dd>
+        <dd><input type="submit" value="Поделиться" class="sumb1" ></dd>
     </dl>
 </form>
 {% endif %}
