--- a/mainFlaskCore/templates/login.html
+++ b/mainFlaskCore/templates/login.html
@@ -7,7 +7,8 @@
     <strong>Ошибка:</strong>{{ error }}
 </p>
 {% endif %}
-<form action="{{ url_for('login') }}" method=post>
+<dif class="form">
+<form action="{{ url_for('login') }}" method=post >
     <dl>
         <dt>Логин:
         <dd><input type=text name=username>
@@ -16,5 +17,6 @@
         <dd><input type=submit value='Войти'>
     </dl>
 </form>
+</dif>
 
 {% endblock %}
