--- a/mainFlaskCore/templates/login.html
+++ b/mainFlaskCore/templates/login.html
@@ -7,8 +7,8 @@
     <strong>Ошибка:</strong>{{ error }}
 </p>
 {% endif %}
-<dif class="form">
-<form action="{{ url_for('login') }}" method=post >
+<dif >
+<form action="{{ url_for('login') }}" method=post class="form">
     <dl>
         <dt>Логин:
         <dd><input type=text name=username>
