--- a/mainFlaskCore/templates/enter.html
+++ b/mainFlaskCore/templates/enter.html
@@ -1,8 +1,11 @@
 
 {% extends 'base.html' %}
+{% block head %}
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+{% endblock %}
 {%  block body %}
-<dif class="form">
-    <form action="{{ url_for('enter') }}" method=post >
+<dif >
+    <form action="{{ url_for('enter') }}" method=post class=form>
         <dl>
             <dt>Логин:
             <dd><input type=text name=username_enter>
